--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "local-storage": "^2.0.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.2.2",
     "react-scripts": "4.0.2",
-    "socket.io-client": "^3.1.1",
+    "socket.io-client": "^3.1.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
