--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "@testing-library/user-event": "^12.6.3",
     "dotenv": "^8.2.0",
     "local-storage": "^2.0.0",
-    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
@@ -39,5 +38,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8081"
+  "proxy": "http://localhost:8081",
+  "devDependencies": {
+    "prettier": "2.2.1"
+  }
 }
