--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@testing-library/user-event": "^12.6.3",
     "dotenv": "^8.2.0",
     "local-storage": "^2.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
