--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,10 @@
     "no-nested-ternary": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
-    "jsx-ally/label-has-associated-control": "off"
+    "jsx-a11y/label-has-associated-control": [ "error", {
+      "required": {
+        "some": [ "nesting", "id"  ]
+      }
+    }]
   }
 }
