--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "dependencies": {
+    "@reach/combobox": "^0.15.1",
+    "@react-google-maps/api": "^2.1.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "dotenv": "^8.2.0",
+    "google-map-react": "^2.1.9",
+    "leaflet": "^1.7.1",
     "local-storage": "^2.0.0",
-    "prop-types": "^15.7.2",
+    "mapbox-gl": "^2.2.0",
     "node": "^15.14.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-leaflet": "^3.1.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "socket.io-client": "^3.1.3",
-    "web-vitals": "^1.1.0"
+    "use-places-autocomplete": "^1.9.1",
+    "web-vitals": "^1.1.0",
+    "worker-loader": "^3.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +50,7 @@
   },
   "proxy": "http://localhost:8081",
   "devDependencies": {
+    "@types/leaflet": "^1.7.0",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
