--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "bootstrap": "^5.0.0-beta3",
     "dotenv": "^8.2.0",
     "google-map-react": "^2.1.9",
     "leaflet": "^1.7.1",
@@ -14,6 +15,7 @@
     "node": "^15.14.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-leaflet": "^3.1.0",
