--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-google-login": "^5.2.2",
     "react-leaflet": "^3.1.0",
     "react-places-autocomplete": "^7.3.0",
+    "react-ratings-declarative": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-star-ratings": "^2.3.0",
     "socket.io-client": "^3.1.3",
     "use-places-autocomplete": "^1.9.1",
     "web-vitals": "^1.1.0",
